# Master-Thesis

./: .gitignore  Makefile  README.md  main.fdb_latexmk  main.fls  main.tex  publish.sh  references.bib  svg_to_pdf.sh
chapters/: 01_introduction.tex  02_background.tex  03_design.tex  04_implementation.tex  05_results.tex  06_conclusion.tex
chapters/02_sections/: cuda_programming_model.tex  gpu_architecture.tex  mathematical_foundations.tex  related_work.tex  tensor_networks.tex
chapters/03_sections/: algorithmic_approach.tex  baseline_selection.tex  data_layout_and_memory_strategy.tex  methodology_reporting_standards.tex  target_kernels.tex  tn_case_study_contraction_order.tex
chapters/04_sections/: integration_and_build_system.tex  kernel_design.tex  occupancy_and_launch_configuration.tex  shared_memory_tiling.tex
chapters/05_sections/: comparison_with_cublas_and_cutensor.tex  discussion.tex  energy_efficiency.tex  experimental_setup.tex  launch_overhead_benchmark.tex  profiling_analysis.tex  scaling_behaviour.tex  single_gpu_performance.tex
code/: common.cuh
code/profiling/: CMakeLists.txt  README.md  gemm_fp32_bad_naive.cu  gemm_fp32_good_cublas.cu  gemm_tf32_bad.cu  gemm_tf32_good.cu  ncu_fp32_profile.slurm  ncu_tn_contraction_profile.slurm  ncu_warp_divergence_profile.slurm  nsight_irregular_training_profile.slurm  tn_irregular_batched_good.cu  tn_irregular_direct_bad_seq.cu  tn_two_site_bad_direct.cu  tn_two_site_good_batched_gemm.cu  warp_divergence_bad_divergent.cu  warp_divergence_good_uniform.cu
code/profiling/phenomena/: README.md  bench_common.cuh  phenomenon_arithmetic_intensity_sweep.cu  phenomenon_coalescing_sweep.cu  phenomenon_divergence_sweep.cu  phenomenon_ilp_dependency.cu  phenomenon_launch_overhead.cu  phenomenon_register_pressure.cu  phenomenon_shared_bank_conflict.cu  submit_all_phenomena.sh
code/profiling/phenomena/slurm/: 00_build_phenomena.slurm  01_divergence_sweep.slurm  02_coalescing_sweep.slurm  03_shared_bank_conflict.slurm  04_launch_overhead.slurm  05_ilp_dependency.slurm  06_register_pressure.slurm  07_arithmetic_intensity.slurm
experiments/: fp_stability.ipynb
scripts/: cublas_fused_kernel_overhead.py  cuda_memory_hierarchy_demo.py  cuda_transfer_timeline_demo.py  cuda_warp_access_playground.py  generate_arithmetic_intensity_heatmap.py  generate_ga100_n7_yield_curve.py  generate_gemm_memory_capacity_plot.py  generate_performance_model_plots.py  generate_phenomena_plots.py
tex/: abbreviations.tex  glossary.tex  preamble.tex  repro.tex  symbols.tex  titlepage.tex
